# FYP-FDCT-GStreamer-Custom-Plugin

./: README.md  compressionpart.c  decompressionpart.c  fdctcustomdepay.c  fdctcustompay.c  meson.build  plugin.c
compress/: Makefile  compress.cu
decompress/: Makefile (1)  decompress.cu
include/: compress.h  compressionpart.h  decompress.h  decompressionpart.h  fdctcustomdepay.h  fdctcustompay.h
